@@ -1,0 +1,3 @@
+.*.sw[nop]
+.build/
+Catalyst-Plugin-SmartURI-*
