@@ -1,42 +1,0 @@
-Catalyst-Plugin-SmartURI
-
-This plugin changes the behaviour of $c->uri_for and $c->req->uri_with.
-
-INSTALLATION
-
-To install this module, run the following commands:
-
-	perl Makefile.PL
-	make
-	make test
-	make install
-
-SUPPORT AND DOCUMENTATION
-
-After installing, you can find documentation for this module with the
-perldoc command.
-
-    perldoc Catalyst::Plugin::SmartURI
-
-You can also look for information at:
-
-    RT, CPAN's request tracker
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Catalyst-Plugin-SmartURI
-
-    AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/Catalyst-Plugin-SmartURI
-
-    CPAN Ratings
-        http://cpanratings.perl.org/d/Catalyst-Plugin-SmartURI
-
-    Search CPAN
-        http://search.cpan.org/dist/Catalyst-Plugin-SmartURI
-
-
-COPYRIGHT AND LICENCE
-
-Copyright (C) 2008 Rafael Kitover
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
-
