@@ -1,0 +1,12 @@
+name                = Catalyst-Plugin-SmartURI
+author              = Rafael Kitover <rkitover@cpan.org>
+license             = Perl_5
+copyright_holder    = Rafael Kitover
+copyright_year      = 2013
+
+[@AVAR]
+dist            = Catalyst-Plugin-SmartURI
+bugtracker      = rt
+authority       = cpan:RKITOVER
+github_user     = rkitover
+install_command = cpanm .
