@@ -1,5 +1,9 @@
 Revision history for Catalyst-Plugin-SmartURI
 
+{{$NEXT}}
+    - converted to git and moved to github
+    - converted to dzil
+
 0.036  2009-11-24 09:08:09
     - POD fixes from Frank Wiegand (RT#51885)
 
